--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@tanstack/react-query": "^5.66.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongodb": "^6.13.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.13.0",
+    "nodemon": "^3.1.9",
+    "stripe": "^17.7.0"
   }
 }
